--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ node_js:
 
 sudo: false
 
+before_script:
+  - chmod +x ./travis/build/ahmadarif/JasperNode/JasperStarter/bin/jasperstarter
+
 install:
   - npm install
 
