--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
 sudo: false
 
 before_script:
-  - chmod +x -R ./travis/build/ahmadarif/JasperNode/JasperStarter/bin
+  - chmod +x -R /home/travis/build/ahmadarif/JasperNode/JasperStarter/bin
 
 install:
   - npm install
