--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,7 @@ before_script:
 install:
 - npm install
 script:
-- npm test
+- npm run cover
+
+# Send coverage data to Coveralls
+after_script: "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
