--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "JasperReports for NodeJS",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --reporter spec"
+    "test": "mocha --reporter spec",
+    "cover": "nyc --reporter=html --reporter=text --reporter=lcov mocha"
   },
   "keywords": [
     "JasperReports",
@@ -14,13 +15,17 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.0.0"
+    "coveralls": "^3.0.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^5.0.0",
+    "nyc": "^11.4.1"
   },
   "publishConfig": {
     "access": "public"
   },
-  "repository" : { 
-    "type" : "git", 
-    "url" : "https://github.com/ahmadarif/JasperNode"
-  }
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ahmadarif/JasperNode"
+  },
+  "dependencies": {}
 }
