--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jaspernode",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "JasperReports for NodeJS",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,7 @@
     "NodeJS"
   ],
   "author": "Ahmad Arif <ahmad.arif019@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "chai": "^4.1.2",
     "coveralls": "^3.0.0",
